Fix 3 issues in IE6: the double margin, button with border-shadow is not displayed correctly, body and footer is not aligned

--- a/css/legacy/smesp/clients.less
+++ b/css/legacy/smesp/clients.less
@@ -66,6 +66,11 @@
         background: transparent url("#CacheSvr#/_imgs/sme/sp/clients/clientsshadow.png") 0 0 no-repeat;
         padding: 3px;
         width: 896px;
+	
+	/* Reset this Class, make the elements margin align self-adaptation so that the body and footer 
+	 will align justified in IE6 */
+	margin-left: auto;
+	margin-right: auto; 
     }
     .et-sme-rotator-active
     {
